chore: misc fixes and dep update.